--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "heroku": "^7.42.1",
+    "material-ui-pickers": "^2.2.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-date-picker": "^8.0.1",
